# wcpool

./: .gitignore  README.md  pyproject.toml
config/: ratings_elo_2026.yaml
docs/: assumptions.md  plan_groupstage_scoring_2026-06-09.md  report_draft_pool_layperson_2026-06-08.html  report_draft_pool_layperson_2026-06-08.md  report_draft_pool_layperson_2026-06-09.html  report_draft_pool_layperson_2026-06-09.md
docs/audits/: audit_trail_2026-06-08_draft_advisor.md  audit_trail_2026-06-08_wcpool.md  audit_trail_2026-06-09_engagement_metrics_impl.md  audit_trail_2026-06-09_engagement_metrics_remediation.md  audit_trail_2026-06-09_groupscoring_execution.md  audit_trail_2026-06-09_groupscoring_selection.md  audit_trail_2026-06-09_groupstage_plan.md  audit_trail_2026-06-09_groupstage_research.md
docs/research/: research_draw_lowscore_modeling_2026-06-09.md  research_engagement_competitive_balance_2026-06-09.md  research_points_system_incentives_2026-06-09.md  research_pool_scoring_design_2026-06-09.md
docs/tables/: participant_sweep_2026-06-08.csv  recommendation_2026-06-08.md  recommendation_2026-06-09.md  (+9 more)
draft_advisor/: README.md  __init__.py  advisor.py  board.py  cli.py  objective.py  opponent.py
scripts/: build_recommendation.py  build_report_html.py  build_report_pdf.py  make_plots.py  participant_sweep.py  run_experiment.py
tests/: test_draft.py  test_engagement_metrics.py  test_integer_tie.py  test_integration.py  test_ladders.py  test_metrics.py  test_scoring.py  test_select.py  test_strength.py  test_tournament.py  test_validation_gate.py
(+32 files in other folders)
