[project]
name = "wcpool"
version = "0.1.0"
description = "Monte Carlo environment for evaluating scoring/draft designs in a 6-person 2026 FIFA World Cup team-draft pool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wcpool"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
